Added test for memory leak